--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "minor-project",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ThanishqPaluru12.github.io/Computer-Lab-Issue-Manager",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
